--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,19 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/png" href="/favicon.png" />
-    <link rel="shortcut icon" type="image/png" href="/favicon.png" />
-    <link rel="apple-touch-icon" href="/favicon.png" />
-    <title>OneStop Justice</title>
-    <meta name="description" content="OneStop Justice - Blockchain-based Justice System" />
-    <meta name="author" content="OneStop Justice" />
+    <link rel="icon" type="image/png" href="/stop.png" />
+    <link rel="shortcut icon" type="image/png" href="/stop.png" />
+    <link rel="apple-touch-icon" href="/stop.png" />
+    <title>Quicksolve</title>
+    <meta name="description" content="Quicksolve - Blockchain-based Justice System" />
+    <meta name="author" content="Quicksolve" />
 
-    <meta property="og:title" content="OneStop Justice" />
+    <meta property="og:title" content="Quicksolve" />
     <meta property="og:description" content="Blockchain-based Justice System" />
     <meta property="og:type" content="website" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="OneStop Justice" />
+    <meta name="twitter:title" content="Quicksolve" />
   </head>
 
   <body>
